crates/mega-evm/tests/satin/snapshots/satin__failed_deposit__a_failed_deposit_keeps_the_hints_it_forwarded.snap
---
source: crates/mega-evm/tests/satin/failed_deposit.rs
expression: "&BTreeMap::from([(\"a deposit\", failed),\n(\"an ordinary transaction\", OutcomeView::new(&outcome)),])"
---
{
  "a deposit": {
    "result": {
      "kind": "halt",
      "reason": "FailedDeposit",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1000000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 0,
      "gas_used": 1000000
    },
    "result_gas": {
      "total_gas_spent": 1000000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 442,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000f00000": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "an ordinary transaction": {
    "result": {
      "kind": "halt",
      "reason": "Base(InvalidFEOpcode)",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 972720,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 1000000
    },
    "result_gas": {
      "total_gas_spent": 1000000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 442,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000f00000": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
